timeline fixed period card subtitles + updated card sizes and spacing

--- a/styles/card.css
+++ b/styles/card.css
@@ -33,6 +33,7 @@
 
 .page.timeline .card-list {
     padding: 120px 0 180px;
+    gap: 3px;
 }
 
 .activity-list {
@@ -268,7 +269,7 @@
 
 .page.timeline .card {
     padding: 0;
-    margin: 6px auto;
+    margin: 6px auto 0;
     width: 98%;
     border-left: 9px solid #0004;
     border-radius: 0;
@@ -853,4 +854,5 @@
 .page.timeline .card.activity {
     width: 90%;
     border-radius: 0.5em;
+    margin: 0 3.6px 0 auto;
 }
